echo "set completion-ignore-case on" >> ~/.inputrc

--- a/centos/综合命令.md
+++ b/centos/综合命令.md
@@ -14,3 +14,12 @@ ftp服务命令：
 
 > rpm -qa | grep hadoop
 
+
+
+## linux命令行路径补全忽略大小写
+
+>echo "set completion-ignore-case on" >> ~/.inputrc
+
+后注解或重启
+
+
