--- a/centos/综合命令.md
+++ b/centos/综合命令.md
@@ -4,6 +4,18 @@
 
 > pwd
 
+完整路径显示
+
+>sudo vim /etc/profile 
+
+在最后一行加上：
+
+> export PS1='[\u@\h $PWD]\$' 
+
+然后执行命令
+
+> source /etc/profile 
+
 ## linux上是否装上了某服务命令
 
 ftp服务命令：
@@ -14,12 +26,5 @@ ftp服务命令：
 
 > rpm -qa | grep hadoop
 
-
-
-## linux命令行路径补全忽略大小写
-
->echo "set completion-ignore-case on" >> ~/.inputrc
-
-后注解或重启
 
 
