--- a/kubernetes----------/阿里云镜像.md
+++ b/kubernetes----------/阿里云镜像.md
@@ -53,9 +53,17 @@ docker pull registry.cn-hangzhou.aliyuncs.com/k8s-arthur/etcd:3.2.26
 
 docker pull registry.cn-hangzhou.aliyuncs.com/k8s-arthur/calico-ctl:v3.4.4
 
+docker pull registry.cn-hangzhou.aliyuncs.com/k8s-arthur/k8s-dns-node-cache:1.15.1
+
 ```
 
 
+
+
+
+
+
+===
 
 
 
