--- a/interview/2020.07.24.md
+++ b/interview/2020.07.24.md
@@ -1510,11 +1510,15 @@ S （specific 明确性）：目标制定一定要明确且具体，不能摸棱
 2/将catalinaLoader设置为Tomcat主线程的线程上下文类加载器；
 3/线程安全的加载class。
 
+
+
 Catalina事实上就由 catalinaClassLoader（其实就是StandardClassLoader）加载进来了，而下一句newInstance时，所有以Catalina为根的对象的类也会全部被隐式加载进来。所谓的隐式加载，就是指在当前类中所有new的对象，如果没有被加载，则使用当前类的类加载器加载，即this.getClass(),getClassLoader()会默认加载该类中所有被new出来的对象的类（前提是他们没在别处先被加载过）。
 
 WebappClassLoader的父类加载器是sharedLoader(即org.apache.catalina.loader.StandardClassLoader)
 
-jvm表示一个是否是同一个类有两个条件：（1）这个类的完整类名是否一样（这个类名包括类所在的包名）；（2）加载这个类的Classloader是否是同一个（这里所有的同一个是指classloader的实例是否是同一个实例，如果是同一个Classloader类的两个实例，加载同一个类也会不一样）
+#### jvm表示一个是否是同一个类有两个条件
+
+（1）这个类的完整类名是否一样（这个类名包括类所在的包名）；（2）加载这个类的Classloader是否是同一个（这里所有的同一个是指classloader的实例是否是同一个实例，如果是同一个Classloader类的两个实例，加载同一个类也会不一样）
 
 
 ![](blogpic/JasperLoader.png)
@@ -3020,7 +3024,50 @@ B、有序集合保存的所有元素的长度小于64字节
 
 所以当一个Bean调用构造函数进行实例化后，即使属性还未填充，就可以通过三级缓存向外暴露依赖的引用值（所以循环依赖问题的解决也是基于Java的引用传递），这也说明了另外一点，基于构造函数的注入，如果有循环依赖，Spring是不能够解决的。还要说明一点，Spring默认的Bean Scope是单例的，而三级缓存中都包含singleton，可见是对于单例Bean之间的循环依赖的解决，Spring是通过三级缓存来实现的
 
+#### ThreadLocal类型变量为何声明为静态
+Java 中每个线程都有与之关联的Thread对象，Thread对象中有一个ThreadLocal.ThreadLocalMap类型的成员变量，该变量是一个Hash表， 所以每个线程都单独维护这样一个Hash表，当ThreadLocal类型对象调用set方法时，threadLocalID.set(id)，这个set方法会使用当前线程维护的Hash表，把自己作为key, id作为value插入到Hash表中。由于每个线程维护的Hash表是独立的，因此在不同的Hash表中，key值即使相同也是没问题的。
 
+如果把threadLocalID声明为非静态，则在类A的每个实例中都会产生一个新对象，这是毫无意义的，只是增加了内存消耗。
+
+
+把ThreadLocal定义为static还有一个好处就是，由于ThreadLocal有强引用在，那么在ThreadLocalMap里对应的Entry的键会永远存在，那么执行remove的时候就可以正确进行定位到并且删除！！！
+
+
+实际上 ThreadLocalMap 中使用的 key 为 ThreadLocal 的弱引用，弱引用的特点是，如果这个对象只存在弱引用，那么在下一次垃圾回收的时候必然会被清理掉。
+所以如果 ThreadLocal 没有被外部强引用的情况下，在垃圾回收的时候会被清理掉的，这样一来 ThreadLocalMap中使用这个 ThreadLocal 的 key 也会被清理掉。但是，value 是强引用，不会被清理，这样一来就会出现 key 为 null 的 value。
+ThreadLocalMap实现中已经考虑了这种情况，在调用 set()、get()、remove() 方法的时候，会清理掉 key 为 null 的记录。如果说会出现内存泄漏，那只有在出现了 key 为 null 的记录后，没有手动调用 remove() 方法，并且之后也不再调用 get()、set()、remove() 方法的情况下。
+
+
+#### BeanFactoryPostProcessor
+BeanPostProcessor：bean后置处理器，bean创建对象初始化前后进行拦截工作的
+而BeanFactoryPostProcessor：是beanFactory的后置处理器；
+调用时机：在BeanFactory标准初始化之后调用，这时所有的bean定义已经保存加载到beanFactory，但是bean的实例还未创建
+能干什么：来定制和修改BeanFactory的内容，如覆盖或添加属性
+
+
+#### 线程池的submit和execute方法区别
+1、接收的参数不一样
+都可以是Runnable
+submit 也可以是Callable
+
+2、submit有返回值，而execute没有
+返回值是Future
+
+3、submit方便Exception处理
+
+#### InheritableThreadLocal和TransmittableThreadLocal
+
+```java
+//初始化一个线程时,获取当前线程,作为父线程
+ Thread parent = currentThread();
+//如果父线程inheritableThreadLocals 不为空时,子线程复制一份inheritableThreadLocals 
+ if (parent.inheritableThreadLocals != null)
+            this.inheritableThreadLocals =
+                ThreadLocal.createInheritedMap(parent.inheritableThreadLocals);
+```
+
+
+#### Tomcat是如何隔离Web应用的？
 
 
 
