--- a/interview/2020.07.24.md
+++ b/interview/2020.07.24.md
@@ -3070,7 +3070,50 @@ submit 也可以是Callable
 #### Tomcat是如何隔离Web应用的？
 
 
+#### expireAfterAccess和expireAfterWrite原理是什么？
+不管使用哪一种缓存过期策略，guava cache都会帮我们确保，同一个key，同时只有一个线程去执行刷新，避免了热点key的大量请求给后端造成的性能压力。但是这样还不够。
 
+expireAfterAccess和expireAfterWrite在缓存过期后，由一个请求去执行后端查询，其他请求都在阻塞等待结果返回，如果同时有大量的请求阻塞，那么可能会产生大影响。
+
+
+guava cache总结
+    内部数据结构
+        类似于ConcurrentHashMap，Segement数组 + Entry链表数组
+    如何管理数据
+        1、被动清理。只有当访问数据（比如get操作）时，guavacache才会去清理数据.
+        2、清理两方面的数据
+            非强引用回收
+            （1）当key或value为非强引用类型（弱引用或软引用）的对象被GC回收后，其对应的entry会被清理（清理当前segment中<所有(reference queues队列中所有的)>非强引用被回收的数据）。
+            有效期判断
+            （2）当数据失效时。 当前数据失效时，会清理整个segment中所有失效的数据（不是只清理当前失效的这个key）。
+            清理时，线程会尝试获得锁，只有获得锁的线程才会去清理，其他线程得不到锁，则直接返回.
+            （3）基于size或weight的LRU清理
+            guava cache是基于LRU算法实现的数据清理，guava cache中有一个accessQueue队列和一个recencyQueue队列，当数据被get读取时，数据节点被放入recencyQueue队列的尾部，当数据被加载出来（包括写操作）时，如果对应的key之前已经存在，则会根据recencyQueue更新accessQueue中元素的顺序（数据顺序按时间排序），然后将新值放入accessQueue尾部，如果key不存在，则直接加入到accessQueue尾部。
+           当cache中超过阈值需要清理时，则从accessQueue的头部开始清理，这样就实现了LRU
+        3、失效判断
+            设置了expiresAfterAccess，并且超过expiresAfterAccess时间没有访问数据（读、写），则数据失效。
+            设置了expiresAfterWrite，并且超过expiresAfterWrite时间没有更新数据（写），则数据失效。
+            数据失效时，清理数据，并去load数据
+        4、数据刷新
+            设置了refreshAfterWrite，并且超过refreshAfterWrite时间没有更新数据，则调用reload刷新数据（guava内部默认是同步调用，如果要实现异步，需要重写reload操作）
+        5、清理刷新数据流程
+            1、首先，访问数据时，如果能通过key找到对应的entry，如果entry对象中对应的key或value为null，则表示是由于gc回收（回收非强引用）导致的，此时会触发对cache中这类数据的主动清理
+            2、接着判断通过key得到的entry是否超过expiresAfterAccess，如果是则过期，触发主动清理过期数据的操作
+            3、然后判断entry是否超过expiresAfterWrite，如果是则过期，触发清理过程
+            4、如果经过上面的操作，数据被清理（返回null），则最后调用load()加载数据。
+            5、如果经过123，数据不为空，则判断refreshAfterWrite，如果满足，则调用reload()刷新数据
+
+    并发处理
+        guava cache内部没有实现多线程回收数据，而是在访问数据时主动去清理（一般以segment为单位清理），目的是为了减小多线程带来的开销
+        load()时, 只会有一个线程去执行load()，其他线程会被阻塞，直到数据加载成功。
+        reload()时，只会有一个线程去执行reload()，其他线程会返回oldValue()，guava内部默认是同步调用reload。
+        因此guava cache推荐重写reload()方法，其默认实现是同步调用load()，需要自己实现多线程处理（比如在reload中搞一个线程池）
+    三个时间参数
+        cache的时间参数一般用于控制数据占用空间和数据的实时性
+        expiresAfterAccess用于管理数据空间，清理不常用的数据
+        expiresAfterWrite和refreshAfterWrite则用于管理数据的时效性。
+        不同的是当expireAfterWrite过期时，会重新同步的load()数据，而refreshAfterWrite过期时，会reload()数据，reload可以实现异步加载。
+        因此在数据时效性上expireAfterWrite和refreshAfterWrite要比expireAfterAccess更灵敏 ， expireAfterAccess可设置的大一些 expireAfterWrite不可设置的太小，否则会造成业务线程同步去拉取数据的频率执行，如果要实现全异步刷新数据，refreshAfterWrite要设置的比前两个值都小，并且实现reload的异步加载。
 
 
 
@@ -3102,6 +3145,10 @@ G1特点
 LSM-Tree 的写放大写放大、读放大、空间放大RockDB 写放大3  za
 优先级队列实现方案
 InheritableThreadLocal原理，如何在父子线程间传递变量
+
+expireAfterWrite和refreshAfterWrite实现原理
+
+
 
 
 微服务和模块划分原则
