--- a/interview/2020.07.24.md
+++ b/interview/2020.07.24.md
@@ -3116,7 +3116,28 @@ guava cache总结
         因此在数据时效性上expireAfterWrite和refreshAfterWrite要比expireAfterAccess更灵敏 ， expireAfterAccess可设置的大一些 expireAfterWrite不可设置的太小，否则会造成业务线程同步去拉取数据的频率执行，如果要实现全异步刷新数据，refreshAfterWrite要设置的比前两个值都小，并且实现reload的异步加载。
 
 
-
+锁消除
+fix线程池默认的队列是什么？
+什么时候用堵塞队列？
+偏向锁是什么来着
+自旋锁对CPU有什么要求
+epoll 原理，数据结构
+Select 是怎么处理事件，遍历后会做什么？
+HTTPS会经历几次握手？和http区别
+GMS过程，缺点
+Callable返回的是什么？
+让主线程等子线程点几种途经
+老年代到年轻代的引用，G1是怎么处理的
+G1怎么做到延时可控
+间隙锁，，，能解决，，，
+行锁带来的问题都有哪些？
+Redis cluster
+为什么做hash而不是取余？
+线程池有没有自己处理异常？
+Hysterics 两种方式？
+怎么做降级的？
+NETTY拆包粘包的几种方式
+Netty 模型，channel 是什么？eventloopgroup
 
 
 
