--- a/interview/2020.07.24.md
+++ b/interview/2020.07.24.md
@@ -1795,6 +1795,8 @@ CLH队列锁的长处是空间复杂度低（假设有n个线程。L个锁，每
 CompletionService
 CompleteableFuture
 
+ThreadLocalMap是当前线程的属性，map的key是当前ThreadLocal对象。 所以，get其实是一个根据key查找value的方法，只是存储的map，隐藏在当前Thread里面。
+
 
 #### 分布式事务的方案,两段提交、三段提交
 ##### 2PC
@@ -2005,7 +2007,7 @@ B -> Z(2.5)
 
 ##### 哪些对象可以作为根对象(GC Roots)吗？
 虚拟机栈（栈帧中的本地变量表）中引用的对象；
-方法区中类静态属于引用的对象；
+方法区中的类静态属性引用的对象
 方法区中常量引用的对象；
 本地方法栈中JNI（即一般说的Native方法）引用的对象。
 
