--- a/interview/2020.07.24.md
+++ b/interview/2020.07.24.md
@@ -3238,12 +3238,51 @@ guava cache总结
 
 
 
+#### jvm内存快照dump文件太大，怎么分析?
+
+如果是线上环境，注意dump之前必须先将流量切走，否则大内存dump是直接卡死服务。
+
+对于比较小的dump，eclipse可以打开，但一旦dump文件太大，eclipse就有点束手无策。 这时候怎么办呢 可以使用linux下的mat，既Memory Analyzer Tools dump生成 dump可以是内存溢出时让其自动生成，或者手工直接导。
+
+如果快照文件很大，可以在服务器上直接分析，使用的命令是：jhat dump.hprof
+
+#### JDK和CGLib动态代理
+
+关于两者之间的性能的话，JDK动态代理所创建的代理对象，在以前的JDK版本中，性能并不是很高，虽然在高版本中JDK动态代理对象的性能得到了很大的提升，但是他也并不是适用于所有的场景。主要体现在如下的两个指标中：
+
+1、CGLib所创建的动态代理对象在实际运行时候的性能要比JDK动态代理高不少，有研究表明，大概要高10倍；
+
+2、但是CGLib在创建对象的时候所花费的时间却比JDK动态代理要多很多，有研究表明，大概有8倍的差距；
+
+3、因此，对于singleton的代理对象或者具有实例池的代理，因为无需频繁的创建代理对象，所以比较适合采用CGLib动态代理，反正，则比较适用JDK动态代理。
+
+
+
 ##### Hystrix 隔离策略
 
 Hystrix内部，提供了两种模式隔离策略：`信号量`、`线程池`。（默认情况下，Hystrix使用 **`线程池模式`**。）
 
 - **信号量隔离**，适应非网络请求，因为是同步的请求，无法支持超时，只能依靠协议本身
 - **线程池隔离**，即：每个实例都增加个线程池进行隔离
+
+
+
+#### HBASE是CP还是AP模型，为什么？
+原来一直以为hbase的强一致性是因为底层的HDFS写入时，必须所有副本都写入成功才能返回。
+1、最近才想明白，hbase之所以是CP系统，实际和底层HDFS无关，它是CP系统，是因为对每一个region同时只有一台RegionServer为它服务，对一个region所有的操作请求，都由这一台RegionServer来响应，自然是强一致性的。
+2、在这台RegionServer fail的时候，它管理的region会failover到其他region server时，需要根据WAL log来redo，这时候进行redo的region应该是unavailable的，所以hbase降低了可用性，提高了一致性。
+3、设想一下，如果redo的region能够响应请求，那么可用性提高了，则必然返回不一致的数据(因为redo可能还没完成)，那么hbase就降低一致性来提高可用性了。
+
+
+
+缓存击穿【需要系统整理一下】
+缓存击穿(热点key)
+名词解释：是指一个key非常热点，在不停的扛着大并发，大并发集中对这一个点进行访问，当这个key在失效的瞬间，持续的大并发就穿破缓存，直接请求数据库，就像在一个屏障上凿开了一个洞。
+解决方案:
+(一)使用互斥锁(mutex key)：先去获得锁，得到锁后构建缓存，其他线程等待构建缓存的线程执行完，重新从缓存获取数据就可以了；
+(二)"提前"使用互斥锁：在value内部设置1个超时值(timeout1), timeout1比实际的timeout(timeout2)小。当从cache读取到timeout1发现它已经过期，马上延长timeout1并重新设置到cache。然后再从数据库加载数据并设置到cache中；
+(三)永不过期：没有设置过期时间就保证不会出现热点key过期问题
+(四)资源保护：做资源的隔离保护主线程池
 
 
 
