--- a/spring/spring-transaction/2.spring-transaction-core-classes.md
+++ b/spring/spring-transaction/2.spring-transaction-core-classes.md
@@ -226,7 +226,7 @@ ConnectionHolder conHolder =
 
 属性方法类图
 
-![](blogpic/DefaultTransactionStatus-detail.png2)
+![](blogpic/DefaultTransactionStatus-detail.png)
 
 TransactionDefinition有七种事务的传播状态以及数据库的隔离级别
 
@@ -241,7 +241,7 @@ A、definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_***
 - PROPAGATION_NOT_SUPPORTED
 
   	挂起当前的事务，Object suspendedResources = suspend(transaction); 所谓挂起，就是将TransactionSynchronizationManager中的状态：suspendedSynchronizations、currentTransactionName、isolationLevel、isActualTransactionActive取出来，new一个对象SuspendedResourcesHolder保存起来，并将TransactionSynchronizationManager中相关的内容清除。TransactionSynchronizationManager是用ThreadLocal存的，每个线程一份，所以不会混淆。
-
+	
   	将definition、newSynchronization、suspendedResources做为参数new一个对象DefaultTransactionStatus，并返回它。
 
   ```java
@@ -253,7 +253,7 @@ A、definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_***
 - PROPAGATION_REQUIRES_NEW
 
   	挂起当前事务，同上一步：SuspendedResourcesHolder suspendedResources = suspend(transaction);
-
+	
   	根据当前transaction和挂起的资源suspendedResources，去创建TransactionStatus对象。 DefaultTransactionStatus status = newTransactionStatus(definition, transaction, true, newSynchronization, debugEnabled, suspendedResources);
 		
   	DataSourceTransactionManager.doBegin(); 下面会单独介绍deBegin()方法
@@ -317,13 +317,13 @@ A、definition.getPropagationBehavior() == TransactionDefinition.PROPAGATION_***
   > DefaultTransactionStatus status = newTransactionStatus(      definition, transaction, true, newSynchronization, debugEnabled, suspendedResources);doBegin(transaction, definition);
 
   	DataSourceTransactionManager.doBegin()
-
+	
   	prepareSynchronization(status, definition);如果是一个新的事务，则初始化transaction synchronization。
 
 - 其它情况
 
   	new TransactionStatus
-
+  	
   	prepareSynchronization(status, definition);如果是一个新的事务，则初始化transaction synchronization
 
 
