高可靠（超负压限降隔回灰故故）

--- a/distributed/-分布式.md
+++ b/distributed/-分布式.md
@@ -1,4 +1,80 @@
-需要画脑图！！
+
+
+![](pics/highAvailability_highConcurrency.png)
+
+## 脑图概要
+
+分布式
+	高并发(SS缓数异池NGR)
+		Scale-up
+		Scale-out
+			架构分层
+		缓存
+		异步
+		池化
+			数据库连接池
+			HttpClient连接池
+			线程池
+		Nginx&网关Gateway
+		RPC
+		数据
+			主从读写分离
+			LSM树+Write Ahead Log
+			冷热数据
+	高可靠（超负压限降隔回灰故故）
+		超时与重试
+		回滚
+			事务回滚
+			代码库回滚
+			部署版本回滚
+			数据版本回滚
+			静态资源回滚
+		压测与应急预案
+		负载均衡
+		限流
+			漏桶算法
+			令牌筒算法
+			滑动窗口
+		降级
+			熔断（熔断也是降级）
+		隔离
+			进程线程隔离
+			集群/机房隔离
+			读写隔离
+			动静隔离
+			爬虫/热点隔离
+			使用Hystrix隔离
+			基于Servlet3的请求隔离
+		failover（故障转移）
+			1.是在完全对等的节点之间做failover
+			2.是在不对等的节点之间，即系统中存在主节点也存在备节点
+		灰度发布
+		故障演练
+			混沌工程Chaos Monkey
+	数据一致性
+	可观测性
+		监控指标
+			延迟
+			吞吐量
+			错误
+			饱和度：服务或者资源的利用率
+	性能优化原则
+		问题导向
+		八二原则
+		过程是持续的
+	性能的度量指标
+		高并发度量指标
+			分位值
+				健康系统的99分位值的响应时间通常需要控制在200ms之内，而不超过1s的请求占比要在99.99%以上
+				分界点
+					200ms之内，用户是感觉不到延迟的
+					1s之内时，虽然用户可以感受到一些延迟
+		高可用度量指标
+			**MTBF（Mean Time Between Failure）**是平均故障间隔
+			**MTTR（Mean Time To Repair）**表示故障的平均恢复时间
+
+
+​			
 
 ## 一、高可用
 
