--- a/interview/-线上问题定位.md
+++ b/interview/-线上问题定位.md
@@ -4,7 +4,7 @@
 
 
 
-![](/Users/lidongyue/codes/GitHub/arthur-dy-lee-note/interview/pics/cpu100use.png)
+![](pics/cpu100use.png)
 
 #### 线上OOM怎么处理
 
