新增设计模式英文1
新增设计模式英文

--- a/设计模式/设计模式简单汇总.md
+++ b/设计模式/设计模式简单汇总.md
@@ -28,15 +28,15 @@
 
 ### 4.3.2 [23种设计模式](http://blog.csdn.net/paincupid/article/details/46993573)
 
-1、<font color=red size=3>创建型模式（原工单抽建/建造单例工厂，抽象原型）</font>
+1、<font color=red size=3>创建型模式（原工单抽建/建造单例工厂，抽象原型）Creational Design Pattern</font>
 
 > 共五种：工厂方法模式、抽象工厂模式、单例模式、建造者模式、原型模式。
 
-2、<font color=red size=3>结构型模式（享代装适组外桥/享元装饰外观，代理桥接适配组合）</font>
+2、<font color=red size=3>结构型模式（享代装适组外桥/享元装饰外观，代理桥接适配组合）Structural Design Pattern</font>
 
 > 共七种：适配器模式、装饰器模式、代理模式、外观模式、桥接模式、组合模式、享元模式。
 
-3、<font color=red size=3>行为型模式 （中访观模状解策命责迭备）</font>
+3、<font color=red size=3>行为型模式 （中访观模状解策命责迭备）Behavioral Design Pattern</font>
 
 > 共十一种：策略模式、模板方法模式、观察者模式、迭代子模式、责任链模式、命令模式、备忘录模式、状态模式、访问者模式、中介者模式、解释器模式。
 
